components/oauth2-proxy-entraid/namespace-test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
    argocd.argoproj.io/sync-wave: '-10'
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
